@startuml

hide circle
left to right direction

entity Student
{
    * StudentId
    ---
    * Name 
    * Email 
}

entity Task
{
    * TaskId
    ---
    * Name 
    * Description 
    * DueDate 
    * StudentId <<FK>>

}

entity Professor
{
    * ProfessorId 
    ---
    * Name 
    * Email
}

entity TaskRating
{
    * TaskId 
    ---
    * Rating 
    * ProfessorId 
}

Student |o--o{ Task
Task ||--|| TaskRating
Professor |o--o{ TaskRating

@enduml